--- a/Project/MOVIES/metadata/connections/movies_db_0.1.properties
+++ b/Project/MOVIES/metadata/connections/movies_db_0.1.properties
@@ -8,9 +8,9 @@
     <additionalProperties xmi:id="_AClcI66XEe-lDsS6LQIekQ" key="modified_product_fullname" value="Talend Open Studio for Data Integration"/>
     <additionalProperties xmi:id="_AClcJK6XEe-lDsS6LQIekQ" key="modified_product_version" value="8.0.1.20211109_1610"/>
     <additionalProperties xmi:id="_AClcJa6XEe-lDsS6LQIekQ" key="modified_date" value="2024-11-30T13:25:37.081+0100"/>
-    <additionalProperties xmi:id="_Ifc6QK_VEe-t2KeKqFyd2A" key="import_product_fullname" value="Talend Open Studio for Data Integration"/>
-    <additionalProperties xmi:id="_Ifc6Qa_VEe-t2KeKqFyd2A" key="import_product_version" value="8.0.1.20211109_1610"/>
-    <additionalProperties xmi:id="_Ifc6Qq_VEe-t2KeKqFyd2A" key="import_date" value="2024-12-01T12:12:20.413+0100"/>
+    <additionalProperties xmi:id="_UFjQIK_UEe-FdMyigqNGZw" key="import_product_fullname" value="Talend Open Studio for Data Integration"/>
+    <additionalProperties xmi:id="_UFjQIa_UEe-FdMyigqNGZw" key="import_product_version" value="8.0.1.20211109_1610"/>
+    <additionalProperties xmi:id="_UFjQIq_UEe-FdMyigqNGZw" key="import_date" value="2024-12-01T12:06:28.740+0100"/>
   </TalendProperties:Property>
   <TalendProperties:ItemState xmi:id="_ACkOBK6XEe-lDsS6LQIekQ" path=""/>
   <TalendProperties:DatabaseConnectionItem xmi:id="_ACkOBa6XEe-lDsS6LQIekQ" property="_ACkOA66XEe-lDsS6LQIekQ" state="_ACkOBK6XEe-lDsS6LQIekQ" typeName="MySQL">
