--- a/Project/MOVIES/process/Dim_Director_0.1.properties
+++ b/Project/MOVIES/process/Dim_Director_0.1.properties
@@ -7,10 +7,10 @@
     <additionalProperties xmi:id="_W4mEMq6PEe-lDsS6LQIekQ" key="created_date" value="2024-11-29T21:20:21.107+0100"/>
     <additionalProperties xmi:id="_W4mEM66PEe-lDsS6LQIekQ" key="modified_product_fullname" value="Talend Open Studio for Data Integration"/>
     <additionalProperties xmi:id="_W4mENK6PEe-lDsS6LQIekQ" key="modified_product_version" value="8.0.1.20211109_1610"/>
-    <additionalProperties xmi:id="_W4mENa6PEe-lDsS6LQIekQ" key="modified_date" value="2024-12-01T08:10:17.757+0100"/>
-    <additionalProperties xmi:id="_ImhyoK_VEe-t2KeKqFyd2A" key="import_product_fullname" value="Talend Open Studio for Data Integration"/>
-    <additionalProperties xmi:id="_Imhyoa_VEe-t2KeKqFyd2A" key="import_product_version" value="8.0.1.20211109_1610"/>
-    <additionalProperties xmi:id="_Imhyoq_VEe-t2KeKqFyd2A" key="import_date" value="2024-12-01T12:12:20.413+0100"/>
+    <additionalProperties xmi:id="_W4mENa6PEe-lDsS6LQIekQ" key="modified_date" value="2024-12-01T12:15:14.622+0100"/>
+    <additionalProperties xmi:id="_UJkNcK_UEe-FdMyigqNGZw" key="import_product_fullname" value="Talend Open Studio for Data Integration"/>
+    <additionalProperties xmi:id="_UJkNca_UEe-FdMyigqNGZw" key="import_product_version" value="8.0.1.20211109_1610"/>
+    <additionalProperties xmi:id="_UJkNcq_UEe-FdMyigqNGZw" key="import_date" value="2024-12-01T12:06:28.740+0100"/>
   </TalendProperties:Property>
   <TalendProperties:ItemState xmi:id="_W4kPAq6PEe-lDsS6LQIekQ" path=""/>
   <TalendProperties:ProcessItem xmi:id="_W4kPA66PEe-lDsS6LQIekQ" property="_W4kPAa6PEe-lDsS6LQIekQ" state="_W4kPAq6PEe-lDsS6LQIekQ">
