--- a/Project/MOVIES_V1/process/Fact_movies_0.1.properties
+++ b/Project/MOVIES_V1/process/Fact_movies_0.1.properties
@@ -7,12 +7,14 @@
     <additionalProperties xmi:id="_Vz9Acq7IEe-B4MpD2b-Meg" key="created_date" value="2024-11-30T04:08:15.223+0100"/>
     <additionalProperties xmi:id="_Vz9Ac67IEe-B4MpD2b-Meg" key="modified_product_fullname" value="Talend Open Studio for Data Integration"/>
     <additionalProperties xmi:id="_Vz9AdK7IEe-B4MpD2b-Meg" key="modified_product_version" value="8.0.1.20211109_1610"/>
-    <additionalProperties xmi:id="_Vz9Ada7IEe-B4MpD2b-Meg" key="modified_date" value="2024-12-07T12:34:29.716+0100"/>
+    <additionalProperties xmi:id="_Vz9Ada7IEe-B4MpD2b-Meg" key="modified_date" value="2024-12-07T16:55:28.512+0100"/>
     <additionalProperties xmi:id="__s3KcLSOEe-0epg_bSo1rA" key="import_product_fullname" value="Talend Open Studio for Data Integration"/>
     <additionalProperties xmi:id="__s3KcbSOEe-0epg_bSo1rA" key="import_product_version" value="8.0.1.20211109_1610"/>
     <additionalProperties xmi:id="__s3KcrSOEe-0epg_bSo1rA" key="import_date" value="2024-12-07T12:32:51.785+0100"/>
   </TalendProperties:Property>
-  <TalendProperties:ItemState xmi:id="_Vz7yUa7IEe-B4MpD2b-Meg" path=""/>
+  <TalendProperties:ItemState xmi:id="_Vz7yUa7IEe-B4MpD2b-Meg" path="" locked="true" lockDate="2024-12-07T16:55:28.512+0100">
+    <locker href="../talend.project#_JmpTMK1hEe-lGfc9JVUspQ"/>
+  </TalendProperties:ItemState>
   <TalendProperties:ProcessItem xmi:id="_Vz7yUq7IEe-B4MpD2b-Meg" property="_Vz7yUK7IEe-B4MpD2b-Meg" state="_Vz7yUa7IEe-B4MpD2b-Meg">
     <process href="Fact_movies_0.1.item#/"/>
   </TalendProperties:ProcessItem>
