--- a/Project/MOVIES_V2/poms/code/routines/pom.xml
+++ b/Project/MOVIES_V2/poms/code/routines/pom.xml
@@ -11,7 +11,7 @@
   <groupId>org.example.movies.code</groupId>
   <artifactId>routines</artifactId>
   <version>8.0.1</version>
-  <name>MOVIES Routines</name>
+  <name>MOVIES_V2 Routines</name>
   <properties>
     <talend.codes.package>routines</talend.codes.package>
     <maven.compiler.failOnError>${codes.compile.failOnError}</maven.compiler.failOnError>
