--- a/Project/MOVIES_V2/poms/pom.xml
+++ b/Project/MOVIES_V2/poms/pom.xml
@@ -6,10 +6,10 @@
   <artifactId>code.Master</artifactId>
   <version>8.0.1</version>
   <packaging>pom</packaging>
-  <name>MOVIES Codes Master</name>
+  <name>MOVIES_V2 Codes Master</name>
   <url>http://www.talend.org/</url>
   <properties>
-    <talend.project.name>MOVIES</talend.project.name>
+    <talend.project.name>MOVIES_V2</talend.project.name>
     <encoding>UTF-8</encoding>
   </properties>
   <build>
